[project]
name = "brand-summarizer"
version = "0.1.0"
description = "LangGraph-driven brand summarizer over a folder of markdown files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.2.50",
    "langchain-openai>=0.2.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "pymongo[srv]>=4.6.0",
    "graphiti-core>=0.7.0",
    "neo4j>=5.20.0",
    "json-repair>=0.30",
    "python-frontmatter>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
